5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_1333.log
== TEST (2019-04-14 23:17:39) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:18:09) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao())
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:37:18) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao())
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:29:19) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao())
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:30:01) 
-- CODE:
expressao = 30–3**2+8//3**2*10

print(expressao())
-- ERROR:
File "XXXX", line 1
    expressao = 30–3**2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:30:11) 
-- CODE:
expressao = 30–3**2+8//3**2*10

print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30–3**2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:30:22) 
-- CODE:
expressao = 30–3**2+8//3**2*10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30–3**2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:35:08) 
-- CODE:
expressao = 413.333333333
print(expressao)
-- OUTPUT:
413.333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:36:11) 
-- CODE:
expressao = 413.333333333
print(float(expressao))
-- OUTPUT:
413.333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:37:11) 
-- CODE:
expressao = 413.333333333
print(int(expressao))
-- OUTPUT:
413
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:37:13) 
-- CODE:
expressao = 413.333333333
print(int(expressao))
-- EXECUTION TIME:
0.125075
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
413
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:37:20) 
-- CODE:
expressao = 413.333333333
print(int(expressao))
-- OUTPUT:
413
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:37:24) 
-- CODE:
expressao = 413.333333333
print(int(expressao))
-- EXECUTION TIME:
0.196887
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
413
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:37:50) 
-- CODE:
expressao = 3/2*3.46410161513
print(int(expressao))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:37:56) 
-- CODE:
expressao = 3/2*3.46410161513
print(int(expressao))
-- EXECUTION TIME:
0.161927
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:38:23) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(int(expressao))
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
